--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 API_URL= /api/v1
 secret = Najem-Abdelillah
-CONNECTION_STRING = mongodb+srv://eshop-user:MA1234567@cluster0.dvldr.mongodb.net/E-ShopDB?retryWrites=true&w=majority                
+
+CONNECTION_STRING =mongodb+srv://eshop-user:MA1234567@cluster0.dvldr.mongodb.net/?retryWrites=true&w=majority            
